Fix header logo on Firefox

--- a/app/assets/stylesheets/application/header.css.scss
+++ b/app/assets/stylesheets/application/header.css.scss
@@ -10,7 +10,6 @@ header {
 }
 
 .header-logo {
-  text-indent: -999px;
   background: transparent;
   display: table;
   border: none;
